<resources>
    <string name="app_name">Multi-Game</string>
    <string name="create_player_bienvenue">Bienvennue !</string>
    <string name="create_player_validate">Valider !</string>
    <string name="create_player_player">Joueurs !</string>
    <string name="create_player_nom">Nom</string>
    <string name="create_player_prenom">Prénom</string>
    <string name="create_player_age">Age</string>
    <string name="create_player_localisation">Localisation</string>
    <string name="location_lat_lng">Lat : %.2f Lon : %.2f</string>
    <string name="display_player_title">Liste de joueurs</string>
    <string name="drag_n_drop">Drag n Drop</string>
    <string name="fast_tap">Fast Tap</string>
    <string name="ipac_fragment">Ipac</string>
    <string name="settings">Paramètres</string>
    <string name="swipe">Swipe</string>
    <string name="start">Commencer !</string>
    <string name="time_left">Temps restant : %d</string>
    <string name="score">Score : %d</string>
    <string name="tap_order">Tap</string>
    <string name="swipe_order">Swipe Haut</string>
    <string name="quit">Quitter</string>
    <string name="menu">Menu</string>
    <string name="scoreScreen">Votre score est de</string>

</resources>