<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/fastGameContainer"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:clickable="true"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:gravity="center">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginTop="100dp"
                android:textAlignment="center"
                android:text="@string/swipe"
                />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginTop="100dp"
                android:textAlignment="center"
                android:text="@string/scoreScreen"
                />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/score"
                />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/swipeMenu"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/swipeQuit"
                android:layout_width="300dp"
                android:layout_marginBottom="300dp"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>




        </LinearLayout>
    </RelativeLayout>
</layout>