<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/fastGameContainer"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:clickable="true"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:text="@string/time_left"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        <TextView
            android:id="@+id/tap_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="60sp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:text="@string/tap_order"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginBottom="100dp"
            android:textAlignment="center"
            android:text="@string/score"
            />




    </LinearLayout>
    </RelativeLayout>
</layout>